--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             const matchContainer = document.getElementById('match-container');
             const newMatchBlocks = [];
 
-            for (let i = 0; i < arr.length; i++) {
+            for (let i = 0; i < 3; i++) {
                 text = arr[i].split('/')
                 console.log(text)
                 const newMatchBlock = document.createElement('div');
