--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
 
         // Добавляем четыре дополнительных текста в каждый блок
         const text1 = document.createTextNode(text[0]);
-        const text2 = document.createTextNode(`команда 1: ${text[1]}`);
-        const text3 = document.createTextNode(`В наличии: ${text[2]}`);
-        const text4 = document.createTextNode(`Описание: ${text[3]}`);
-        const text5 = document.createTextNode(`команда 1: ${text[4]}`);
-        const text6 = document.createTextNode(`В наличии: ${text[5]}`);
-        const text7 = document.createTextNode(`Описание: ${text[6]}`);
+        const text2 = document.createTextNode(`Команда 1: ${text[1]}`);
+        const text3 = document.createTextNode(`Команда 2: ${text[2]}`);
+        const text4 = document.createTextNode(`Текуший счёт: ${text[3]}`);
+        const text5 = document.createTextNode(`Победа 1 команды: ${text[4]}`);
+        const text6 = document.createTextNode(`Ничья: ${text[5]}`);
+        const text7 = document.createTextNode(`Победа 2 команды: ${text[6]}`);
         block.appendChild(text1);
         block.appendChild(document.createElement('br')); // Добавляем перевод строки
         block.appendChild(text2);
