--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@ words.forEach(word => {
     const text2 = document.createTextNode(`Команда 1: ${text[1] || 'Неизвестно'}`);
     const text3 = document.createTextNode(`Команда 2: ${text[2] || 'Неизвестно'}`);
     const text4 = document.createTextNode(`Текущий счёт: ${text[3] || 'Неизвестно'}`);
-    const text5 = document.createTextNode(`Победа 1 команды: ${text[4] || 'Неизвестно'}`);
+    const text5 = document.createTextNode(`Коэффицент победы 1 команды: ${text[4] || 'Неизвестно'}`);
     const text6 = document.createTextNode(`Ничья: ${text[5] || 'Неизвестно'}`);
-    const text7 = document.createTextNode(`Победа 2 команды: ${text[6] || 'Неизвестно'}`);
+    const text7 = document.createTextNode(`Коэффицент победы 2 команды: ${text[6] || 'Неизвестно'}`);
 
     block.appendChild(text1);
     block.appendChild(document.createElement('br')); // Добавляем перевод строки
